<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/standard"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
<<<<<<< HEAD
    android:paddingBottom="@dimen/activity_vertical_margin"
>

    <EditText
        android:id="@+id/loginusername"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="412dp"
        android:hint="@string/username"
        android:importantForAutofill="no"
        android:inputType="text"
        android:minHeight="48dp"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
=======
    android:paddingBottom="@dimen/activity_vertical_margin">

    <EditText
        android:id="@+id/loginEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:selectAllOnFocus="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.53"
>>>>>>> BACKUP_BRANCH
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/loginpassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:hint="@string/password"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionDone"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
<<<<<<< HEAD
        app:layout_constraintTop_toBottomOf="@+id/loginusername"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="64dp"
        android:backgroundTint="@color/dark_org_button"
        android:enabled="false"
        android:onClick="handlingLogin"
        android:text="@string/login"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginpassword"
        app:layout_constraintVertical_bias="0.42" />

=======
        app:layout_constraintTop_toBottomOf="@+id/loginEmail"
        tools:ignore="TextContrastCheck" />

>>>>>>> BACKUP_BRANCH
    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="137dp"
        android:layout_height="139dp"
<<<<<<< HEAD
        android:layout_marginStart="112dp"
        android:layout_marginTop="28dp"
        android:contentDescription="agora palace"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview5"
=======
        android:layout_marginBottom="444dp"
        android:contentDescription="agora palace"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
>>>>>>> BACKUP_BRANCH
        app:srcCompat="@drawable/agora" />

    <TextView
        android:id="@+id/textview5"
        android:layout_width="214dp"
        android:layout_height="65dp"
<<<<<<< HEAD
        android:layout_marginStart="76dp"
        android:layout_marginTop="116dp"
=======
        android:layout_marginTop="56dp"
>>>>>>> BACKUP_BRANCH
        android:fontFamily="@font/lancelot"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textSize="50sp"
        android:textStyle="bold"
<<<<<<< HEAD
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
=======
        app:layout_constraintBottom_toTopOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.151" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/dark_org_button"
        android:backgroundTint="@color/dark_org_button"
        android:onClick="handlingLogin"
        android:text="@string/login"
        app:iconTint="@color/standard"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.812"
        tools:ignore="TextContrastCheck" />
>>>>>>> BACKUP_BRANCH

</androidx.constraintlayout.widget.ConstraintLayout>